# langflow_rag_astra_db_project

./: .env  .gitignore  ASTRA_LANGFLOW_GUIDE.md  AUTOMATION_README.md  LANGFLOW_MCP_SETUP.md  README.md  env.template  fix-requests.bat  fix-requests.ps1  install-langflow-mcp.bat  install-langflow-mcp.ps1  install-playwright-mcp.bat  install-playwright-mcp.ps1  install_automation_deps.py  integrate-astra-with-langflow.py  langflow-mcp-config.json  langflow-mcp-example.py  langflow-mcp-simple.json  langflow_automation.py  langflow_config.json  pyproject.toml  run-demo.bat  run-demo.ps1  run_langflow_automation.py  setup-astra-for-langflow.py  setup-astra-secure.py  setup-langflow-mcp.ps1  setup-langflow-mcp.py  test-astra-connection.py  uv-plugin-manager.bat  uv-plugin-manager.ps1
config/: astra-config.json  mcp-config.json
examples/: README.md  astra-integration.py  demo-script.py  enhanced-astra-rag-flow.json  smart-assistant-flow.json  test-cases.json
