[project]
name = "langflow-mcp"
version = "1.0.0"
description = "Langflow MCP 插件管理專案"
requires-python = "^>=3.8"
dependencies = [
    "langflow^>=1.0.0",
    "mcp",
    "requests",
    "uvicorn",
    "fastapi",
    "pydantic",
    "astrapy^>=0.7.0",
    "openai^>=1.0.0",
    "numpy^>=1.24.0",
    "pandas^>=2.0.0",
    "sentence-transformers^>=2.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8"
]
